--- a/package.json
+++ b/package.json
@@ -1,15 +1,22 @@
 {
-  "name": "portfolio-nextjs-bekha",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "next": "10.0.9",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
-  }
+	"name": "portfolio-nextjs-bekha",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "node server.js",
+		"build": "next build",
+		"start": "cross-env NODE_ENV=production node server.js"
+	},
+	"dependencies": {
+		"axios": "^0.21.1",
+		"cross-env": "^7.0.3",
+		"express": "^4.17.1",
+		"next": "10.0.9",
+		"next-routes": "^1.4.2",
+		"react": "17.0.2",
+		"react-dom": "17.0.2"
+	},
+	"devDependencies": {
+		"sass": "^1.32.8"
+	}
 }
