--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
 	},
 	"dependencies": {
 		"axios": "^0.21.1",
+		"bootstrap": "^4.6.0",
 		"cross-env": "^7.0.3",
 		"express": "^4.17.1",
 		"next": "10.0.9",
 		"next-routes": "^1.4.2",
 		"react": "17.0.2",
-		"react-dom": "17.0.2"
+		"react-dom": "17.0.2",
+		"reactstrap": "^8.9.0"
 	},
 	"devDependencies": {
 		"sass": "^1.32.8"
