--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
 		"next-routes": "^1.4.2",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
-		"reactstrap": "^8.9.0",
-		"react-dom": "17.0.2"
+		"react-typed": "^1.2.0",
+		"reactstrap": "^8.9.0"
 	},
 	"devDependencies": {
 		"sass": "^1.32.8"
